# hexcel

./: .gitignore  Makefile  README.md  empty.xlsx  example.yml  hexcel.cabal  invalid.yml  invalid2.yml  invalid3.yml  marks.csv  marksheet.xlsx  rubric-vals.csv  rubric.csv  scores.csv  stack.yaml  values.csv
src/: Main.hs  rubric2xlsx.hs  rubric2yaml.hs  rupdate.hs  test.hs  update_marks.hs
src/Codec/Xlsx/: CSVRubric.hs  SimpleFormatted.hs  XMLRubric.hs
src/Data/: YamlRubric.hs
