name:                hexcel
version:             0.1.0.0
synopsis:            Create formatted excel spreadsheet from (CSV) input.
description:         Please see README.md
homepage:            https://github.com/githubuser/hexcel#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  build-tools:       ghc >= 7.0
  default-language:  Haskell2010
  hs-source-dirs:    src
  exposed-modules:   Codec.Xlsx.SimpleFormatted

  build-depends:     base >= 4.7 && < 5
                   , bytestring
                   , containers
                   , csv
                   , data-default-class
                   , lens
                   , regex-pcre
                   , text
                   , time
                   , xlsx


executable hexcel
  build-tools:       ghc >= 7.0
  default-language:  Haskell2010
  hs-source-dirs:    src
  main-is:           Main.hs
  build-depends:     base >= 4.7 && < 5
                   , bytestring
                   , cmdargs
                   , containers
                   , csv
                   , data-default-class
                   , directory
                   , lens
                   , regex-pcre
                   , text
                   , time
                   , xlsx

  other-modules:     Codec.Xlsx.SimpleFormatted

executable rupdate
  build-tools:       ghc >= 7.0
  default-language:  Haskell2010
  hs-source-dirs:    src
  main-is:           rupdate.hs
  build-depends:     base >= 4.7 && < 5
                   , aeson
                   , bytestring
                   , cmdargs
                   , containers
                   , csv
                   , data-default-class
                   , directory
                   , filepath
                   , lens
                   , pretty-simple
                   , regex-pcre
                   , scientific
                   , text
                   , time
                   , unordered-containers
                   , vector
                   , xlsx
                   , yaml


  other-modules:     Codec.Xlsx.SimpleFormatted

executable rubric2xlsx
  build-tools:       ghc >= 7.0
  default-language:  Haskell2010
  hs-source-dirs:    src
  main-is:           rubric2xlsx.hs
  build-depends:     base >= 4.7 && < 5
                   , bytestring
                   , cmdargs
                   , containers
                   , csv
                   , data-default
                   , data-default-class
                   , directory
                   , filepath
                   , HStringTemplate
                   , lens
                   , mtl
                   , regex-pcre
                   , text
                   , time
                   , xlsx
                   , xml

  other-modules:     Codec.Xlsx.SimpleFormatted
                   , Codec.Xlsx.CSVRubric
                   , Codec.Xlsx.XMLRubric


executable rubric2yaml
  hs-source-dirs:      src
  main-is:             rubric2yaml.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , cmdargs
                     , csv
                     , pretty-simple                     
                     , regex-pcre
                     , scientific
                     , text
                     , unordered-containers
                     , vector
                     , yaml

  other-modules:     Data.YamlRubric


executable update_marks
  build-tools:       ghc >= 7.0
  default-language:  Haskell2010
  hs-source-dirs:    src
  main-is:           update_marks.hs
  build-depends:     base >= 4.7 && < 5
                   , bytestring
                   , cmdargs
                   , containers
                   , csv
                   , data-default-class
                   , directory
                   , lens
                   , regex-pcre
                   , text
                   , time
                   , xlsx

  other-modules:     Codec.Xlsx.SimpleFormatted

-- Test excel
executable texcel
  build-tools:       ghc >= 7.0
  default-language:  Haskell2010
  hs-source-dirs:    src
  main-is:           test.hs
  build-depends:     base >= 4.7 && < 5
                   , bytestring
                   , cmdargs
                   , containers
                   , csv
                   , data-default-class
                   , directory
                   , lens
                   , regex-pcre
                   , text
                   , time
                   , xlsx

  other-modules:     Codec.Xlsx.SimpleFormatted
